<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done"
        android:title="@string/action_delete_all_products"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_call"
        android:title="@string/action_call"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_email"
        android:title="@string/action_send_email"
        app:showAsAction="never" />

</menu>